simple landing page with no content

--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" type="image/png" href="assets/images/logo.png"/>
+
+    <!-- bootstrap css sheet -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
+        integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Home</title>
 </head>
+
 <body>
-    <h1>Mooooooin</h1>
+    <div class="container">
+        <header class="d-flex logo mx-auto mt-3">
+            <img src="assets/images/logo.png" width="600" height="600">
+            <div class="ml-1">
+                <div class="logo-title px-1">Georg Auge</div>
+                <div class="logo-subtitle px-1">studying IT-Systems Engineering</div>
+            </div>
+        </header>
+
+        <!--h1 class="mt-3 text header">Georg Auge</h1>
+        <h3 class="text subheader">currently studying <span class="lovelo-black">IT-Systems Engineering</span> at <a
+                href="https://www.hpi.de">HPI</a></h3-->
+
+        <div id="gif404" class="mt-5">
+            <img src="assets/images/404.gif" width="400" height="300" alt="GIF showing 404">
+        </div>
+
+
+
+    </div>
+
+    <footer class="p-3">
+        <div class="img-credits">
+            Favicon made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel
+                perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            <br>404 GIF made by <a href="https://www.pinterest.com/dribbble/">Dribble</a> from <a
+                href="https://www.pinterest.com/pin/550565123177949029/">Pinterest</a>
+        </div>
+    </footer>
+
+    <!-- bootstrap js package -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js"
+        integrity="sha384-5h4UG+6GOuV9qXh6HqOLwZMY4mnLPraeTrjT5v07o347pj6IkfuoASuGBhfDsp3d"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
