--- a/index.html
+++ b/index.html
@@ -34,12 +34,16 @@
             <img src="assets/images/404.gif" width="400" height="300" alt="GIF showing 404">
         </div>
 
-
-
     </div>
 
     <footer class="p-3">
-        <div class="img-credits">
+        <div class="d-flex justify-content-around social-links">
+            <a href="https://github.com/gwauge">GitHub</a>&#8226;
+            <a href="https://www.instagram.com/georg.auge/">Instagram</a>&#8226;
+            <a href="https://www.twitter.com/gwauge">Twitter</a>
+        </div>
+
+        <div class="credits mt-2">
             Favicon made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel
                 perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
             <br>404 GIF made by <a href="https://www.pinterest.com/dribbble/">Dribble</a> from <a
