removed 'studying' from subheading

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="assets/images/logo.png" width="600" height="600">
             <div class="ml-1">
                 <div class="logo-title px-1">Georg Auge</div>
-                <div class="logo-subtitle px-1">studying IT-Systems Engineering</div>
+                <div class="logo-subtitle px-1">IT-Systems Engineering</div>
             </div>
         </header>
 
