--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Georg Auge's personal website, showing nothing but a logo thus far.">
 
-    <link rel="icon" type="image/png" href="assets/images/logo.png"/>
+    <link rel="icon" type="image/png" href="assets/images/logo.png" />
 
     <!-- bootstrap css sheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
@@ -17,24 +18,27 @@
 </head>
 
 <body>
-    <div class="container">
-        <header class="d-flex logo mx-auto mt-3">
-            <img src="assets/images/logo.png" width="600" height="600">
-            <div class="ml-1">
-                <div class="logo-title px-1">Georg Auge</div>
-                <div class="logo-subtitle px-1">IT-Systems Engineering</div>
-            </div>
-        </header>
-
-        <!--h1 class="mt-3 text header">Georg Auge</h1>
-        <h3 class="text subheader">currently studying <span class="lovelo-black">IT-Systems Engineering</span> at <a
-                href="https://www.hpi.de">HPI</a></h3-->
-
-        <div id="gif404" class="mt-5">
-            <img src="assets/images/404.gif" width="400" height="300" alt="GIF showing 404">
+    <header class="d-flex logo mx-auto mt-3">
+        <img src="assets/images/logo.png" width="600" height="600" alt="Georg Auge logo">
+        <div class="ml-1">
+            <div class="logo-title px-1">Georg Auge</div>
+            <div class="logo-subtitle px-1">IT-Systems Engineering</div>
         </div>
+    </header>
 
-    </div>
+    <main>
+        <div class="container">
+
+            <!--h1 class="mt-3 text header">Georg Auge</h1>
+                <h3 class="text subheader">currently studying <span class="lovelo-black">IT-Systems Engineering</span> at <a
+                    href="https://www.hpi.de">HPI</a></h3-->
+
+            <div id="gif404" class="mt-5">
+                <video src="assets/images/404.webm" autoplay loop width="400" height="300">
+            </div>
+
+        </div>
+    </main>
 
     <footer class="p-3">
         <div class="d-flex justify-content-around social-links">
