added "muted" attribute to 404 video
Chrome policy will only allow autoplay if the video is muted

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     href="https://www.hpi.de">HPI</a></h3-->
 
             <div id="gif404" class="mt-5">
-                <video src="assets/images/404.webm" autoplay loop width="400" height="300">
+                <video src="assets/images/404.webm" autoplay loop muted width="400" height="300">
             </div>
 
         </div>
