--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
 
     <footer class="p-3">
         <div class="d-flex justify-content-around social-links">
-            <a href="https://github.com/gwauge">GitHub</a>&#8226;
-            <a href="https://www.instagram.com/georg.auge/">Instagram</a>&#8226;
-            <a href="https://www.twitter.com/gwauge">Twitter</a>
+            <a href="https://github.com/gwauge">GitHub</a>
+            <!-- &#8226; -->
         </div>
 
         <div class="credits mt-2">
